# rag-comparison-demo

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  WINDOWS_SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini  run.bat  run.ps1
api/grpc/: rag_service.proto  server.py
api/rest/: app.py  worker.py
core/: config.py
core/embeddings/: base.py
core/fallback/: chain.py
core/guardrails/: validators.py
core/retrieval/: vector_store.py
data/: ingest.py
data/sample_corpus/: rag_overview.md  transformers_attention.md
docs/: design_decisions.md  rollback.md
finetuning/: dataset_prep.py  eval.py  train.py
graph_db/: neo4j_client.py  neptune_client.py
graph_db/schema/: setup.cypher
observability/: logging.py  metrics.py  otel-config.yaml  prometheus.yml  tracing.py
observability/grafana/dashboards/: grafana_dashboard.json
orchestrator/: graph.py  state.py
pipelines/agentic_rag/: graph.py
pipelines/graph_rag/: graph.py
prompts/: generate_v1.yaml
tests/: conftest.py  test_agentic_rag.py  test_integration.py
tests/load/: locustfile.py
ui/: gradio_app.py
